@@ -3,14 +3,14 @@ MD5 c184cffd07a7e3e5ad7b04360c97229a files/0.7_rc2/build.xml 3109
 RMD160 383024482104b1a6dc85648ddc1bd89709c02bb6 files/0.7_rc2/build.xml 3109
 SHA256 ba08dd4c637a295f3288a4e152f54a7a7fcb41e31151ec660800ce7aa4402dda files/0.7_rc2/build.xml 3109
 DIST scout-0.7_rc2.tar.bz2 68506 RMD160 b2669cdcd42c87579db5ec46362865e30bd22a05 SHA1 7825097cbc3a854872e55603dde3f5df274f7efa SHA256 6563c06467480b01f11a18722846dc17f77583a0d6512d820f5c01d34b67a1dd
-EBUILD scout-0.7_rc2.ebuild 1643 RMD160 7fcc4e21f98345abd43e81f96b89e9bd7bd5eba9 SHA1 d40d1f46dec41d414a5fa0b0c59ea6239deab25e SHA256 b26ced09e764f20723c96e37b7eb83424250221231e9063449a25a9de7352b28
-MD5 7b9d0b6aa22b5a2382d5d8c195c32f4f scout-0.7_rc2.ebuild 1643
-RMD160 7fcc4e21f98345abd43e81f96b89e9bd7bd5eba9 scout-0.7_rc2.ebuild 1643
-SHA256 b26ced09e764f20723c96e37b7eb83424250221231e9063449a25a9de7352b28 scout-0.7_rc2.ebuild 1643
-MISC ChangeLog 435 RMD160 89f712a61175bf2b38d8e0a0973596a1639cc73e SHA1 b1bf96c871eb2463ab1bb3e04182be30a930c63a SHA256 cb6be1bb83d44a28de68e73a3ac4aca3927fcdd37fa1da424b6387f32b183c1b
-MD5 f2d5f7189fd441ffaa96d02ea49e18ca ChangeLog 435
-RMD160 89f712a61175bf2b38d8e0a0973596a1639cc73e ChangeLog 435
-SHA256 cb6be1bb83d44a28de68e73a3ac4aca3927fcdd37fa1da424b6387f32b183c1b ChangeLog 435
+EBUILD scout-0.7_rc2.ebuild 2078 RMD160 06a88953812fa94490b6e08c5371997180d3b437 SHA1 9321ef1bfcd4ba125f4091ec49d81df761ddaea1 SHA256 a0e3a2a4ad54ce6d2d1c4aecbfeea1ba5d5174d791107537ca3813f2f0cc3644
+MD5 b03d3a80566c8661c5477ac1ba4ef6f3 scout-0.7_rc2.ebuild 2078
+RMD160 06a88953812fa94490b6e08c5371997180d3b437 scout-0.7_rc2.ebuild 2078
+SHA256 a0e3a2a4ad54ce6d2d1c4aecbfeea1ba5d5174d791107537ca3813f2f0cc3644 scout-0.7_rc2.ebuild 2078
+MISC ChangeLog 548 RMD160 003d28c5da76aacfada343af0d9d4bc6b862c597 SHA1 90d65636103f0b5db34700fb59ea9a81c0b95f60 SHA256 6fa8725cd5fecd96f1a529f5925ae5d4fe8c7fba2e7e3bd8a197e94960bedec7
+MD5 6520d3f7d27e694b6c04990b3d0c7e0d ChangeLog 548
+RMD160 003d28c5da76aacfada343af0d9d4bc6b862c597 ChangeLog 548
+SHA256 6fa8725cd5fecd96f1a529f5925ae5d4fe8c7fba2e7e3bd8a197e94960bedec7 ChangeLog 548
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
